# adopt-a-pet

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  cloudbuild-images.yaml  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml
docker/: Dockerfile  Dockerfile.cloudrun
docs/: technical_design.md
src/: config.py
src/api/: app.py  routes.py
src/api/templates/: base.html  home.html  results.html
src/data/: downloader.py  processor.py  schemas.py
src/embeddings/: clip_encoder.py
src/search/: es_client.py  indexer.py  searcher.py
src/static/: style.css
tests/: conftest.py  test_clip_encoder.py  test_config.py  test_downloader.py  test_indexer.py  test_processor.py  test_routes.py  test_schemas.py  test_searcher.py
